# voxel-engine

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  code-review.agent.md  conformance-review.agent.md  core.agent.md  delivery.agent.md  gameplay.agent.md  orchestrator.agent.md  performance-review.agent.md  proof-of-concept.agent.md  qa.agent.md  rendering.agent.md  research.agent.md
assets/textures/: dirt.json  glass.json  grass.json  lava.json  stone.json  water.json
docs/: architecture.md
src/: main.cpp
src/core/: application.cpp  application.hpp
src/game/: player_controller.cpp  player_controller.hpp
src/platform/: window.cpp  window.hpp
src/render/: shader_program.cpp  shader_program.hpp  voxel_renderer.cpp  voxel_renderer.hpp
src/scene/: fps_camera.cpp  fps_camera.hpp
src/world/: chunk_mesher.cpp  chunk_mesher.hpp  voxel_types.hpp  voxel_world.cpp  voxel_world.hpp  world_generator.cpp  world_generator.hpp
